scaffold for the section discussing the aspect evaluated in the report

--- a/report/report.tex
+++ b/report/report.tex
@@ -140,16 +140,22 @@
         \subsection{The aspects evaluated}
         \label{subsec:aspects}
             %% TODO
-            %%   * Capability/ease of simulation
-            %%   * Capability/ease of verification (of formal properties)
-            %%   * Capability to express generic (parameterized) families of circuits
-            %%     - Parameterized by functional as well as non-functional parameters
-            %%   * Integration with other tools (implementation)
-            %%     - Synthesis, theorem provers, etc.
-            %%   * Level of embedding
-            %%   * Extensibility
-            %%     - Multiple interpretations for circuits
-            %%     - User-defined datatypes
+
+            \textbf{TODO}
+            \par
+
+            \begin{itemize}
+                \item Capability/ease of simulation
+                \item Capability/ease of verification (of formal properties)
+                \item Capability to express generic (parameterized) families of circuits
+                    \subitem Parameterized by functional as well as non-functional parameters
+                \item Integration with other tools (implementation)
+                    \subitem Synthesis, theorem provers, etc.
+                \item Level of embedding
+                \item Extensibility
+                    \subitem Multiple interpretations for circuits
+                    \subitem User-defined datatypes
+            \end{itemize}
 
 
     \section{Modeled circuits}
